# Design_Patterns

./: .gitignore  .gitmodules  CMakeLists.txt  Design_Patterns.pro  Design_Patterns.sln  Properties.cpp  README.md  build.sh
Behavioral_Patterns/: CMakeLists.txt  README.md  main.cpp
Behavioral_Patterns/Chain_of_Responsibility/: CMakeLists.txt  Chain_of_Responsibility.vcxproj
Behavioral_Patterns/Command/: CMakeLists.txt  Command.vcxproj
Behavioral_Patterns/Interpreter/: CMakeLists.txt
Behavioral_Patterns/Iterator/: CMakeLists.txt  Iterator.vcxproj
Behavioral_Patterns/Mediator/: CMakeLists.txt
Behavioral_Patterns/Memento/: CMakeLists.txt  Memento.vcxproj
Behavioral_Patterns/Observer/: CMakeLists.txt
Behavioral_Patterns/State/: CMakeLists.txt  State.vcxproj
Behavioral_Patterns/Strategy/: CMakeLists.txt
Behavioral_Patterns/Template_Method/: CMakeLists.txt
Behavioral_Patterns/Visitor/: CMakeLists.txt
Creational_Patterns/: CMakeLists.txt  Return_Objects.cpp  Return_Objects.hpp  main.cpp  select_test_framework.hpp
Creational_Patterns/Abstract_Factory/: Abstract_Factory.vcxproj  CMakeLists.txt  map_site.cpp  map_site.hpp  map_site.py  maze.cpp  maze.hpp  maze_factory.cpp  maze_factory.hpp  maze_game.cpp  maze_game.hpp  test_abstract_factory_pattern.cc  test_abstract_factory_pattern.hh
Creational_Patterns/Builder/: CMakeLists.txt  door.cpp  door.hpp  map_site.hpp  maze.cpp  maze.hpp  maze_builder.cpp  maze_builder.hpp  maze_game.cpp  maze_game.hpp  room.cpp  room.hpp  spell.hpp  test_builder_pattern.c++  user_exception.cpp  user_exception.hpp  wall.cpp  wall.hpp
Creational_Patterns/Factory_Method/: CMakeLists.txt  ConcreteCreator.cpp  ConcreteCreator.hpp  ConcreteProduct.c++  ConcreteProduct.h++  Creator.hh  Factory_Method.cpp  Factory_Method.hpp  Main.cpp  Makefile  Product.c++  creator.cpp  creator.hpp  creator_factory.cpp  creator_factory.hpp  figure.cpp  figure.hpp  manipulator.cpp  manipulator.hpp  parameterized_creator.hpp  parameterized_creator_impl.hpp  product.cpp  product.hpp
Creational_Patterns/Factory_Method/maze_game/: maze_game.cpp  maze_game.hpp
Creational_Patterns/Factory_Method/unit_testing/: test_factory_method_pattern.c++  test_factory_method_pattern.h++
Creational_Patterns/Factory_Method/utils/: finalize.hpp  finalize_impl.hpp
Creational_Patterns/Prototype/: CMakeLists.txt
Creational_Patterns/Singleton/: CMakeLists.txt
OOC/: Animal.c  Animal.h  Beagle.c  Beagle.h  CMakeLists.txt  Cat.c  Cat.h  Cow.c  Cow.h  Dog.c  Dog.h  Giraffe.c  Giraffe.h  Human.c  Human.h  Main.c  SOOC.h  ShihTzu.c  ShihTzu.h  Who.c  Who.h
Probe_OpenCASCADE/: CMakeLists.txt  main.cpp
SOLID/: CMakeLists.txt  DIP.cpp  DIP.hpp  ISP.cpp  ISP.hpp  LSP.cpp  LSP.hpp  OCP.cpp  OCP.hpp  SRP.cpp  SRP.hpp  build.sh
Structural_Patterns/: CMakeLists.txt  README.md  main.cpp
Structural_Patterns/Adapter/: Adaptee.cpp  Adaptee.hpp  Adaptee.py  Adapter.vcxproj  Adpater.cpp  CMakeLists.txt  Makefile  Multi_Inheritance_Adapter.cpp  Multi_Inheritance_Adapter.hpp  README.md  Target.cpp  Target.hpp  Target.py  adaptee.cpp  adaptee.hpp  adapter.cpp  adapter.hpp  main.cpp  main.py  manipulator.cpp  manipulator.hpp  shape.cpp  shape.hpp  target.cpp  target.hpp  test_adapter_pattern.cc  text_manipulator.cpp  text_manipulator.hpp  text_shape.cpp  text_shape.hpp  text_view.cpp  text_view.hpp
Structural_Patterns/Adapter/c#/: AdapterPatten.cs
Structural_Patterns/Adapter/cpp/: Manipulator.hpp  Point.cpp  Point.hpp  README.md  Shape.cpp  Shape.hpp  TextManipulator.cpp  TextManipulator.hpp  TextShape.cpp  TextShape.hpp  TextView.cpp  TextView.hpp
Structural_Patterns/Adapter/java/: AdapterPatternDemo.java  AdvancedMediaPlayer.java  AudioPlayer.java  CMakeLists.txt  MediaAdapter.java  MediaPlayer.java  Mp4Player.java  README.md  VlcPlayer.java
Structural_Patterns/Adapter/python/: class_adapter.py  object_adapter.py
Structural_Patterns/Bridge/: Abstraction.py  Abstration.hpp  Bridge.vcxproj  CMakeLists.txt  ConcreteImplementation.cpp  ConcreteImplementation.hpp  ExtendedAbstraction.cpp  ExtendedAbstraction.py  Implementation.cpp  Implementation.hpp  Makefile  README.md  test_bridge_pattern.cc  view.cpp  view.hpp  window.cpp  window.hpp  window_factory.cpp  window_factory.hpp  window_impl.cpp  window_impl.hpp
Structural_Patterns/Bridge/c#/: Abstraction.cs  Client.cs  ConcreteImplementation.cs  ExtendedAbstraction.cs  IImplementation.cs  Program.cs
Structural_Patterns/Bridge/cpp/: Abstraction.cpp  Abstraction.hpp  ApplicationWindow.cpp  ApplicationWindow.hpp  Client.cpp  Client.hpp  ConcreteImplementor.cpp  ConcreteImplementor.hpp  Coord.hpp  IconWindow.cpp  IconWindow.hpp  Implementor.hpp  PPOINTL.hpp  PresentationManagerWindowImpl.cpp  PresentationManagerWindowImpl.hpp  RefinedAbstraction.cpp  RefinedAbstraction.hpp  UnimplementedException.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp  WindowImpl.hpp  WindowSystemFactory.cpp  WindowSystemFactory.hpp  XWindowImpl.cpp  XWindowImpl.hpp
Structural_Patterns/Bridge/python/: Abstraction.py  Client.py  ConcreteImplementation.py  (+3 more)
Structural_Patterns/Composite/: CMakeLists.txt  Client.py  Component.cpp  Component.hpp  Component.py  Composite.hpp  Composite.pro  Composite.py  Leaf.hpp  Leaf.py  Makefile  README.md  client.cpp
Structural_Patterns/Decorator/: CMakeLists.txt
Structural_Patterns/Facade/: CMakeLists.txt
Structural_Patterns/Flyweight/: CMakeLists.txt  Flyweight.vcxproj
Structural_Patterns/Proxy/: CMakeLists.txt
Structural_Patterns/common_utils/: CMakeLists.txt  coord.hpp  finalize.cpp  finalize.hpp  point.cpp  point.hpp
Testing/: CMakeLists.txt  main.cpp
Testing/Common/: CMakeLists.txt  Test_Config.cpp  Test_Config.hpp  Test_Logger.cpp  Test_Tool.cpp  config.xml
Testing/GeometryDynamic/: CMakeLists.txt  Test_GeometryDynamicConfig.cpp  Test_TopoTool.cpp  main.cpp
testing/Test_Creational_Patterns/: CMakeLists.txt  main.cpp
testing/Test_Structural_Patterns/: CMakeLists.txt  finalize.cpp  finalize.hpp  main.cpp
testing/test_misc/: CMakeLists.txt  check_scoped_enum.cpp  check_scoped_enum.hpp  main.cpp
(+84 files in other folders)
